# PyBaseExtended

./: .gitignore  404.html  README.md  dev_requirements.txt  index.html  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: linters.yml  release.yml  unittests.yml
colors/: index.html
docs/: about.md  colors.md  enum.md  index.md
enum/: index.html
search/: search_index.json
src/py_back/: __init__.py  _version.py
src/py_back/constants/: _generate_color_enums.py  colors.py
src/pybase_ext/constants/: __init__.py  _generate_color_enums.py  colors.py
src/pybase_ext/enum/: __init__.py  _types.py
unittests/: test_enums.py
