[project]
name = "pybase-ext"
authors = [
    # You can specify multiple authors if required!
    { name = "Jaime Gonzalez Gomez", email = "jim.gomez.dnn@gmail.com" },
]
description = "CHANGEME"
urls = { Source = "https://github.com/Jtachan/PyBaseExtended.git" }
dependencies = [
    # The idea is to keep this package without dependencies
]
requires-python = ">=3.7"
license = { text = "MIT license" }
dynamic = ["readme", "version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "pybase-ext._version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
src_paths = ["src", "unittests"]
